Added "s3n" conversion ticket to CHANGELOG

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -48,6 +48,7 @@ StorageLoader: added Rake task to build app (#1787)
 StorageLoader: scrubbed credentials from stderr (#1918)
 StorageLoader: added test suite (#1919)
 StorageLoader: ensured that _SUCCESS file is written last for enriched events archived to S3 (#1814)
+StorageLoader: started automatically converting "s3n" to "s3" in copy statements (#1937)
 StorageLoader: wrote JSON path file for com.snowplowanalytics.monitoring.batch/emr_job_started (#1875)
 StorageLoader: wrote JSON path file for com.snowplowanalytics.monitoring.batch/emr_job_succeeded (#1876)
 StorageLoader: wrote JSON path file for com.snowplowanalytics.monitoring.batch/emr_job_failed (#1877)
